Using `Stream#toList` instead of `Collectors.toList()`.